# Sprycode

./: .gitignore  README.md  pyproject.toml  spry.toml
.github/workflows/: ci.yml
docs/: getting-started.md  security.md  stdlib-reference.md  syntax.md
examples/: advanced_features.spry  control_flow_patterns.spry  file_operations.spry  hello.spry  loops_and_pipelines.spry  microservices.spry  pipelines.spry  secure_data_mover.spry  security.spry  tests.spry  transactions.spry
src/sprycode/: __init__.py  cli.py  (+5 more)
src/sprycode.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_batch2.py  test_builtins.py  test_interpreter.py  test_lang_features.py  test_lexer.py  test_math.py  test_new_features.py  test_oop.py  test_parser.py  test_permissions.py  test_phase100_features.py  test_phase101_features.py  test_phase102_features.py  test_phase103_features.py  test_phase104_features.py  test_phase105_features.py  test_phase106_features.py  test_phase107_features.py  test_phase108_features.py  test_phase109_features.py  test_phase10_features.py  test_phase110_features.py  test_phase111_features.py  test_phase112_features.py  test_phase113_features.py  test_phase114_features.py  test_phase115_features.py  test_phase116_features.py  test_phase117_features.py  test_phase118_features.py  test_phase119_features.py  test_phase11_features.py  test_phase120_features.py  test_phase121_features.py  test_phase122_features.py  test_phase123_features.py  test_phase124_features.py  test_phase125_features.py  test_phase126_features.py  (+248 more)
(+2 files in other folders)
